/*
SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-Only-1.0
*/

////////////////////// e2ap-pdu-descriptions.proto //////////////////////
// Protobuf generated from /e2ap_v2.asn by asn1c-0.9.29
// E2AP-PDU-Descriptions { iso(1) identified-organization(3) dod(6) internet(1) private(4) enterprise(1) 53148 e2(1) version2(2) e2ap(1) e2ap-PDU-Descriptions(0) }

syntax = "proto3";

package e2ap_go.v2;
option go_package = "github.com/onosproject/onos-e2t/api/e2ap_go/v2/e2ap-pdu-descriptions";

import "e2ap_go/v2/e2ap_commondatatypes.proto";
import "e2ap_go/v2/e2ap_pdu_contents.proto";
import "e2ap_go/v2/e2ap_constants.proto";
import "validate/v1/validate.proto";

// sequence from e2ap_v2.asn:100
// {E2AP-PDU}
// aper:"valueExt"
message E2ApPdu {
    // choice from e2ap_v2.asn:100
    oneof e2_ap_pdu {
        // @inject_tag: aper:"choiceIdx:1"
        InitiatingMessage initiating_message = 1 [ json_name="initiatingMessage"];
        // @inject_tag: aper:"choiceIdx:2"
        SuccessfulOutcome successful_outcome = 2 [ json_name="successfulOutcome"];
        // @inject_tag: aper:"choiceIdx:3"
        UnsuccessfulOutcome unsuccessful_outcome = 3 [ json_name="unsuccessfulOutcome"];
    }
};

// sequence from e2ap_v2.asn:107
// {InitiatingMessage}
message InitiatingMessage {
    // @inject_tag: aper:"valueLB:0,valueUB:255"
    int32 procedure_code = 1 [ json_name="procedureCode"];
    // @inject_tag: aper:"valueLB:0,valueUB:2"
    Criticality criticality = 2 [ json_name="criticality"];
    InitiatingMessageE2ApElementaryProcedures value = 3 [ json_name="value"];
};

message InitiatingMessageE2ApElementaryProcedures {

    oneof im_values {
        // @inject_tag: aper:"choiceIdx:1"
        RicsubscriptionRequest ric_subscription = 1 [ json_name="ric_subscription"];
        // @inject_tag: aper:"choiceIdx:2"
        RicsubscriptionDeleteRequest ric_subscription_delete = 2 [ json_name="ric_subscription_delete"];
        // @inject_tag: aper:"choiceIdx:3"
        RicserviceUpdate ric_service_update = 3 [ json_name="ric_service_update"];
        // @inject_tag: aper:"choiceIdx:4"
        RiccontrolRequest ric_control = 4 [ json_name="ric_control"];
        // @inject_tag: aper:"choiceIdx:5"
        E2setupRequest e2setup = 5 [ json_name="e2setup"];
        // @inject_tag: aper:"choiceIdx:6"
        E2nodeConfigurationUpdate e2node_configuration_update = 6 [ json_name="e2node_configuration_update"];
        // @inject_tag: aper:"choiceIdx:7"
        E2connectionUpdate e2connection_update = 7 [ json_name="e2connection_update"];
        // @inject_tag: aper:"choiceIdx:8"
        ResetRequest reset = 8 [ json_name="reset"];
        // @inject_tag: aper:"choiceIdx:9"
        Ricindication ric_indication = 9 [ json_name="ric_indication"];
        // @inject_tag: aper:"choiceIdx:10,valueExt"
        RicserviceQuery ric_service_query = 10 [ json_name="ric_service_query"];
        // @inject_tag: aper:"choiceIdx:11"
        ErrorIndication error_indication = 11 [ json_name="error_indication"];
        // @inject_tag: aper:"choiceIdx:12"
        RicsubscriptionDeleteRequired ric_subscription_delete_required = 12 [ json_name="ric_subscription_delete_required"];
    }
}

// sequence from e2ap_v2.asn:113
// {SuccessfulOutcome}
message SuccessfulOutcome {
    // @inject_tag: aper:"valueLB:0,valueUB:255"
    int32 procedure_code = 1 [ json_name="procedureCode"];
    // @inject_tag: aper:"valueLB:0,valueUB:2"
    Criticality criticality = 2 [ json_name="criticality"];
    SuccessfulOutcomeE2ApElementaryProcedures value = 3 [ json_name="value"];
};

message SuccessfulOutcomeE2ApElementaryProcedures {

    oneof so_values {
        // @inject_tag: aper:"choiceIdx:1"
        RicsubscriptionResponse ric_subscription = 1 [ json_name="ric_subscription"];
        // @inject_tag: aper:"choiceIdx:2"
        RicsubscriptionDeleteResponse ric_subscription_delete = 2 [ json_name="ric_subscription_delete"];
        // @inject_tag: aper:"choiceIdx:3"
        RicserviceUpdateAcknowledge ric_service_update = 3 [ json_name="ric_service_update"];
        // @inject_tag: aper:"choiceIdx:4"
        RiccontrolAcknowledge ric_control = 4 [ json_name="ric_control"];
        // @inject_tag: aper:"choiceIdx:5"
        E2setupResponse e2setup = 5 [ json_name="e2setup"];
        // @inject_tag: aper:"choiceIdx:6"
        E2nodeConfigurationUpdateAcknowledge e2node_configuration_update = 6 [ json_name="e2node_configuration_update"];
        // @inject_tag: aper:"choiceIdx:7"
        E2connectionUpdateAcknowledge e2connection_update = 7 [ json_name="e2connection_update"];
        // @inject_tag: aper:"choiceIdx:8"
        ResetResponse reset = 8 [ json_name="reset"];
        }
}

// sequence from e2ap_v2.asn:119
// {UnsuccessfulOutcome}
message UnsuccessfulOutcome {
    // @inject_tag: aper:"valueLB:0,valueUB:255"
    int32 procedure_code = 1 [ json_name="procedureCode"];
    // @inject_tag: aper:"valueLB:0,valueUB:2"
    Criticality criticality = 2 [ json_name="criticality"];
    UnsuccessfulOutcomeE2ApElementaryProcedures value = 3 [ json_name="value"];
};

message UnsuccessfulOutcomeE2ApElementaryProcedures {

    oneof uo_values {
        // @inject_tag: aper:"choiceIdx:1"
        RicsubscriptionFailure ric_subscription = 1 [ json_name="ric_subscription"];
        // @inject_tag: aper:"choiceIdx:2"
        RicsubscriptionDeleteFailure ric_subscription_delete = 2 [ json_name="ric_subscription_delete"];
        // @inject_tag: aper:"choiceIdx:3"
        RicserviceUpdateFailure ric_service_update = 3 [ json_name="ric_service_update"];
        // @inject_tag: aper:"choiceIdx:4"
        RiccontrolFailure ric_control = 4 [ json_name="ric_control"];
        // @inject_tag: aper:"choiceIdx:5"
        E2setupFailure e2setup = 5 [ json_name="e2setup"];
        // @inject_tag: aper:"choiceIdx:6"
        E2nodeConfigurationUpdateFailure e2node_configuration_update = 6 [ json_name="e2node_configuration_update"];
        // @inject_tag: aper:"choiceIdx:7"
        E2connectionUpdateFailure e2connection_update = 7 [ json_name="e2connection_update"];
    }
}
